# betty

./: .browserslistrc  .busted  .coveragerc  .eslintignore  .gitattributes  .gitignore  .pydocstyle.ini  .pydocstylerc  .readthedocs.yaml  .ruff.toml  .stylelintignore  .stylelintrc.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.md  LICENSE  MANIFEST.in  README.md  babel.ini  betty.pot  browserslist  codecov.yml  cypress.config.js  eslint.config.js  flake8.ini  go.mod  main.go  mypy.ini  nose2.cfg  package.json  playwright.config.ts  pyinstaller.spec  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test.py  test2.py  (+3 more)
.github/: dependabot.yml
.github/workflows/: delete-dev-release.yml  delete-dev-releases.yml  delete-pr-release.yml  publish-windows-exe.yml  pull-request-build-pyinstaller.yml  pull-request-create-release.yml  pull-request-delete-release.yml  release-build-pyinstaller.yml  release-build-setuptools.yml  release.yml  tag-dev.yml  test.yml
betty/: __init__.py  __main__.py  _bootstrap.py  _npm.py  _patch.py  _resizeimage.py  about.py  ancestry.py  anonymizer.py  app.py  assets.py  asyncio.py  attr.py  b0x.yaml  betty.py  bootstrap.py  builtins.pyi  cache.py  classtools.py  cleaner.py  cli.py  concurrent.py  config.py  config.schema.json  content_type.py  contextlib.py  core.py  date.py  demo.py  deriver.py  dispatch.py  docstring.py  documentation.py  environment.py  error.py  event.py  event_dispatcher.py  factory.py  fetch.py  fs.py  (+55 more)
betty/_package/: __init__.py
betty/ancestry/: __init__.py  citation.py  date.py  description.py  enclosure.py  event.py  event_type.py  file.py  file_reference.py  gender.py  has_citations.py  has_file_references.py  has_notes.py  link.py  locale.py  media_type.py  name.py  note.py  person.py  person_name.py  place.py  place_type.py  presence.py  presence_role.py  privacy.py  source.py
betty/anonymizer/: __init__.py
betty/app/: __init__.py  config.py  extension.py  factory.py
betty/assertion/: __init__.py  error.py
betty/assets/: .eslintrc.yaml  betty.css  betty.pot  betty.webmanifest
betty/cache/: __init__.py  _base.py  file.py  memory.py  no_op.py
betty/cleaner/: __init__.py
betty/cli/: __init__.py  _discover.py  command.py  error.py
betty/config/: __init__.py  dump.py  error.py  format.py  load.py  validate.py
betty/copyright/: __init__.py  copyrights.py
betty/copyright_notice/: __init__.py  copyright_notices.py
betty/cotton_candy/: __init__.py  gui.py  search.py
betty/demo/: __init__.py
betty/deriver/: __init__.py
betty/extension/: __init__.py
betty/fetch/: __init__.py  http.py  static.py
betty/generate/: __init__.py  file.py  pool.py  task.py
betty/gramps/: __init__.py  config.py  error.py  gui.py  loader.py
betty/gui/: __init__.py  app.py  error.py  locale.py  logging.py  model.py  project.py  serve.py  text.py  window.py
betty/http_api_doc/: __init__.py
betty/jinja2/: __init__.py  filter.py  test.py
betty/job/: __init__.py  pool.py
betty/json/: __init__.py  linked_data.py  schema.py
betty/license/: __init__.py  licenses.py
betty/linked_data/: __init__.py
betty/locale/: __init__.py  babel.py  date.py  error.py  localizable.py  localized.py  localizer.py  translation.py
betty/maps/: __init__.py
betty/media_type/: __init__.py  media_types.py
betty/model/: __init__.py  ancestry.py  association.py  collections.py  event_type.py  graph.py  presence_role.py
betty/npm/: __init__.py
betty/plugin/: __init__.py  assertion.py  config.py  entry_point.py  lazy.py  proxy.py  static.py
betty/plugins/: maps.py  npm.py  webpack.py
betty/privacy/: __init__.py  privatizer.py
betty/privatizer/: __init__.py
betty/project/: __init__.py  config.py  extension.py  factory.py  generate.py  load.py  url.py
betty/pytests/: __init__.py  conftest.py  test_gui.py
betty/render/: __init__.py  html.py  render.go
betty/resources/: config.schema.json  package.json  webpack.config.js  webpack.config.js.j2
betty/serde/: __init__.py  dump.py  error.py  format.py  load.py
betty/service/: __init__.py  _default.py
betty/sphinx/: __init__.py
betty/templates/: base.html  event.html  family.html  list-event.html  list-family.html  list-person.html  list-place.html  list.html  person.html  place.html
betty/test_utils/: __init__.py  attr.py  cache.py  cli.py  concurrent.py  conftest.py  copyright.py  copyright_notice.py  coverage.py  jinja2.py  license.py  locale.py  privacy.py  serve.py
betty/tests/: .ruff.toml  __init__.py  conftest.py  test__npm.py  test_about.py  test_ancestry.py  test_anonymizer.py  test_app.py  test_assets.py  test_asyncio.py  test_attr.py  test_cache.py  test_cleaner.py  test_cli.py  test_concurrent.py  test_config.py  test_contextlib.py  test_core.py  test_coverage.py  test_date.py  test_deriver.py  test_docstring.py  test_documentation.py  test_error.py  test_event_dispatcher.py  test_event_type.py  test_factory.py  test_fetch.py  test_fs.py  test_functools.py  test_generate.py  test_gramps.py  test_graph.py  test_hashid.py  test_html.py  test_image.py  test_importlib.py  test_jinja2.py  test_job.py  test_json.py  (+32 more)
betty/trees/: __init__.py
betty/url/: __init__.py  proxy.py
betty/wikipedia/: __init__.py  copyright_notice.py
busted/: content_negotiation_spec.lua
cypress/: .eslintrc.yaml
cypress/app/: betty.json
cypress/integration/: search.spec.js
cypress/plugins/: index.js
documentation/: about.rst  cli.rst  conf.py  configuration.rst  development.rst  extension.rst  gedcom.rst  gramps.rst  index.rst  installation.rst  python.rst  translation.rst  usage.rst
documentation/_templates/: versions.html
documentation/about/: contributing.rst  license.rst
documentation/development/: betty.rst  event-dispatcher.rst  extension.rst  plugin.rst  test.rst  translation.rst
documentation/extension/: anonymizer.rst  cleaner.rst  deriver.rst  gramps.rst  maps.rst  nginx.rst  (+4 more)
gramps/: gramps.go
render/: render.go
site/: sitecustomize.py
snap/: snapcraft.yaml
templates/: base.html  event.html  person.html
(+1192 files in other folders)
