[build-system]
requires = [
    'setuptools ~= 70.0',
]
build-backend = 'setuptools.build_meta'

[project]
dynamic = [
    'version',
]
name = 'betty'
description = 'Betty helps you visualize and publish your family history by building interactive genealogy websites out of your Gramps and GEDCOM family trees'
readme = 'README.md'
license = {file = 'LICENSE.txt'}
authors = [
  {name = 'Bart Feenstra', email = 'bar@bartfeenstra.com'},
]
requires-python = '~= 3.11'
dependencies = [
    'aiofiles ~= 24.1',
    'aiohttp ~= 3.9',
    'babel ~= 2.12, >= 2.12.0',
    'click ~= 8.1, >= 8.1.2',
    'docker ~= 7.0, >= 7.0.0',
    'furo == 2024.7.18',
    'geopy ~= 2.3, >= 2.3.0',
    'html5lib ~= 1.1',
    'jinja2 ~= 3.1, >= 3.1.1',
    'jsonschema ~= 4.17, >= 4.17.0',
    'langcodes ~= 3.3, >= 3.3.0',
    'markupsafe ~= 2.1, >= 2.1.1',
    'multidict ~= 6.0, >= 6.0.5',
    'pdf2image ~= 1.16, >= 1.16.0',
    'polib ~= 1.2, >= 1.2.0',
    'Pillow ~= 10.1, >= 10.1.0',
    'pyyaml ~= 6.0, >= 6.0.0',
    'referencing ~= 0.35',
    'sphinx ~= 7.2, >= 7.2.6',
    'sphinx-design ~= 0.6',
    'sphinx-autodoc-typehints ~= 2.2',
    'typing_extensions ~= 4.10, >= 4.10.0',
]
classifiers = [
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: JavaScript',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Lua',
    'Programming Language :: JavaScript',
    'Programming Language :: Unix Shell',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Topic :: Internet',
    'Topic :: Scientific/Engineering :: Visualization',
    'Topic :: Sociology :: Genealogy',
    'Topic :: Sociology :: History',
    'Topic :: Software Development :: Code Generators',
    'Natural Language :: Dutch',
    'Natural Language :: English',
    'Natural Language :: French',
    'Natural Language :: German',
    'Natural Language :: Ukrainian',
    'Typing :: Typed ',
]

[project.urls]
Documentation = 'https://betty.readthedocs.io'
Github = 'https://github.com/bartfeenstra/betty'
Twitter = 'https://twitter.com/BettyProject'
X = 'https://twitter.com/BettyProject'

[project.entry-points.'console_scripts']
betty = 'betty.cli:main'

[project.entry-points.'betty.command']
'clear-caches' = 'betty.cli.commands.clear_caches:clear_caches'
'config' = 'betty.cli.commands.config:config'
'demo' = 'betty.cli.commands.demo:demo'
'docs' = 'betty.cli.commands.docs:docs'
'generate' = 'betty.cli.commands.generate:generate'
'serve' = 'betty.cli.commands.serve:serve'
'serve-nginx-docker' = 'betty.extension.nginx._cli:serve_nginx_docker'

[project.entry-points.'betty.dev.command']
'dev-init-translation' = 'betty.cli.commands.dev_init_translation:dev_init_translation'
'dev-update-translations' = 'betty.cli.commands.dev_update_translations:dev_update_translations'

[project.entry-points.'betty.entity_type']
'citation' = 'betty.model.ancestry:Citation'
'enclosure' = 'betty.model.ancestry:Enclosure'
'event' = 'betty.model.ancestry:Event'
'file' = 'betty.model.ancestry:File'
'note' = 'betty.model.ancestry:Note'
'person' = 'betty.model.ancestry:Person'
'person-name' = 'betty.model.ancestry:PersonName'
'presence' = 'betty.model.ancestry:Presence'
'place' = 'betty.model.ancestry:Place'
'source' = 'betty.model.ancestry:Source'

[project.entry-points.'betty.event_type']
'adoption' = 'betty.model.event_type:Adoption'
'baptism' = 'betty.model.event_type:Baptism'
'birth' = 'betty.model.event_type:Birth'
'burial' = 'betty.model.event_type:Burial'
'conference' = 'betty.model.event_type:Conference'
'confirmation' = 'betty.model.event_type:Confirmation'
'correspondence' = 'betty.model.event_type:Correspondence'
'cremation' = 'betty.model.event_type:Cremation'
'death' = 'betty.model.event_type:Death'
'divorce' = 'betty.model.event_type:Divorce'
'divorce-announcement' = 'betty.model.event_type:DivorceAnnouncement'
'emigration' = 'betty.model.event_type:Emigration'
'engagement' = 'betty.model.event_type:Engagement'
'funeral' = 'betty.model.event_type:Funeral'
'immigration' = 'betty.model.event_type:Immigration'
'marriage' = 'betty.model.event_type:Marriage'
'marriage-announcement' = 'betty.model.event_type:MarriageAnnouncement'
'missing' = 'betty.model.event_type:Missing'
'occupation' = 'betty.model.event_type:Occupation'
'residence' = 'betty.model.event_type:Residence'
'retirement' = 'betty.model.event_type:Retirement'
'unknown' = 'betty.model.event_type:UnknownEventType'
'will' = 'betty.model.event_type:Will'

[project.entry-points.'betty.extension']
'cotton-candy' = 'betty.extension.cotton_candy:CottonCandy'
'demo' = 'betty.extension.demo:Demo'
'deriver' = 'betty.extension.deriver:Deriver'
'gramps' = 'betty.extension.gramps:Gramps'
'http-api-doc' = 'betty.extension.http_api_doc:HttpApiDoc'
'maps' = 'betty.extension.maps:Maps'
'nginx' = 'betty.extension.nginx:Nginx'
'privatizer' = 'betty.extension.privatizer:Privatizer'
'trees' = 'betty.extension.trees:Trees'
'webpack' = 'betty.extension.webpack:Webpack'
'wikipedia' = 'betty.extension.wikipedia:Wikipedia'

[project.entry-points.'betty.presence_role']
'attendee' = 'betty.model.presence_role.Attendee'
'beneficiary' = 'betty.model.presence_role.Beneficiary'
'celebrant' = 'betty.model.presence_role.Celebrant'
'organizer' = 'betty.model.presence_role.Organizer'
'speaker' = 'betty.model.presence_role.Speaker'
'subject' = 'betty.model.presence_role.Subject'
'witness' = 'betty.model.presence_role.Witness'

[project.optional-dependencies]
setuptools = [
    'setuptools ~= 70.0',
    'twine ~= 5.0',
    'wheel ~= 0.43',
]
test = [
    'aioresponses ~= 0.7, >= 0.7.6',
    'basedmypy ~= 2.0, >= 2.2.1',
    'coverage ~= 7.2, >= 7.2.4',
    'lxml ~= 5.0; sys.platform != "win32"',
    'packaging ~= 24.0',
    'pip-licenses ~= 4.3, >= 4.3.0',
    'pytest ~= 8.2',
    'pytest-aioresponses ~= 0.2, >= 0.2.0 ',
    'pytest-asyncio ~= 0.23, >= 0.23.4 ',
    'pytest-mock ~= 3.10, >= 3.10.0',
    'ruff ~= 0.5',
    'types-aiofiles ~= 24.1',
    'types-babel ~= 2.11, >= 2.11.0.15',
    'types-click ~= 7.1, >= 7.1.8',
    'types-html5lib ~= 1.1, >= 1.1.11.20240228',
    'types-jsonschema ~= 4.21, >= 4.21.0.20240331',
    'types-lxml >= 2024.3.27 ',
    'types-polib ~= 1.2, >= 1.2.0.0',
    'types-pyinstaller ~= 6.5, >= 6.5.0.20240311',
    'types-pyyaml ~= 6.0, >= 6.0.6',
    'types-requests ~= 2.29, >= 2.29.0.0',
    'types-setuptools ~= 70.0',
    'virtualenv ~= 20.26',
    'betty[setuptools]',
]
development = [
    'pytest-repeat ~= 0.9, >= 0.9.1',
    'betty[test]',
]
ci = [
    'codecov ~= 2.1, >= 2.1.12',
    'betty[test]',
]

[tool.setuptools.dynamic]
version = {file = ['betty/assets/VERSION']}

[tool.setuptools.packages.find]
where = ['.']
exclude = [
    'betty.tests',
    'betty.tests.*',
]

[tool.setuptools.package-data]
betty = [
    'py.typed',

    # Assets.
    'assets/**',
    'extension/*/assets/**',

    # Webpack.
    '../.browserslistrc',
    '../tsconfig.json',
    'extension/*/webpack/**',

    # Prebuilt assets.
    '../prebuild/**',
]

[tool.setuptools.exclude-package-data]
betty = [
    '__pycache__',
]
